--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
   <title>Pokemon Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-  
+
 </head>
 <body>
   <header class="navbar-fixed">
@@ -20,6 +20,7 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
+          <li><a href="/pokemon">View All Pokemon</a></li>
         </ul>
       </div>
     </nav>
