--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,8 +19,8 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Poke-Collector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/pokemon">View All Pokemon</a></li>
+          <li><a href={% url 'about' %}>About</a></li>
+          <li><a href={% url 'index' %}>View All Pokemon</a></li>
         </ul>
       </div>
     </nav>
