--- a/main_app/templates/pokemon/index.html
+++ b/main_app/templates/pokemon/index.html
@@ -5,12 +5,14 @@
 
 {% for pokemon in pokemon %}
   <div class="card">
+  <a href="/pokemon/{{ pokemon.id }}">
     <div class="card-content">
       <span class="card-title">{{ pokemon.name }}</span>
       <p>Name: {{ pokemon.name }}</p>
       <p>Trainer: {{ pokemon.trainer }}</p>
       <p>Training Session: {{ pokemon.session }}<p>
     </div>
+    </a>
   </div>
 {% endfor %}
 
